Fix errors in IE.
IE doesn't support Number.parseInt, only global parseInt.
IE doesn't respect xhr.responseType, so we have to manually
parse the response json.
Force search to never have a horizontal scroll.

--- a/less/search.less
+++ b/less/search.less
@@ -15,6 +15,7 @@
 
 .search .search-results {
   overflow-y: scroll;
+  overflow-x: hidden;
   // Fudge for rotated cards and title and lane numbers.  Totally made up.
   max-height: (@lane-height * 3) + 170px;
 }
